# UnbeleivableEngine

Engine/: CMakeLists.txt  vcpkg.json
Engine/Config/: resources.yaml
Engine/Source/Component/Private/Base/: ActorComponent.cpp  BaseComponent.cpp  SceneComponent.cpp
Engine/Source/Component/Private/Camera/: CameraComponent.cpp
Engine/Source/Component/Private/Collision/: BoxCollider.cpp  Collider.cpp  RigidBody.cpp
Engine/Source/Component/Private/Drawable/: SpriteComponent.cpp
Engine/Source/Component/Private/Scripting/: LuaScript.cpp
Engine/Source/Component/Public/Base/: ActorComponent.h  BaseComponent.h  SceneComponent.h
Engine/Source/Component/Public/Camera/: CameraComponent.h
Engine/Source/Component/Public/Collision/: BoxCollider.h  Collider.h  RigidBody.h
Engine/Source/Component/Public/Drawable/: SpriteComponent.h
Engine/Source/Component/Public/Scripting/: LuaScript.h
Engine/Source/Debug/Private/: DrawHelper.cpp
Engine/Source/Debug/Public/: DrawHelper.h
Engine/Source/Framework/Private/: Delegate.cpp
Engine/Source/Framework/Public/: Delegate.h
Engine/Source/GameFramework/Private/: Game.cpp  GameplayStatics.cpp  ResourceManager.cpp
Engine/Source/GameFramework/Private/Physics/: Collision.cpp  CollisionListener.cpp  ICollidable.cpp  Physics.cpp
Engine/Source/GameFramework/Public/: Game.h  GameplayStatics.h  ResourceManager.h
Engine/Source/GameFramework/Public/Physics/: Collision.h  CollisionListener.h  ICollidable.h  Physics.h
Engine/Source/Object/Private/: ITickable.cpp  Object.cpp  ObjectStore.cpp
Engine/Source/Object/Private/GameObject/: GameObject.cpp
Engine/Source/Object/Public/: ITickable.h  Object.h  ObjectStore.h
Engine/Source/Object/Public/GameObject/: GameObject.h
Game/: CMakeLists.txt  main.cpp
Game/Config/: resources.yaml
Game/Source/Components/Private/: CarCollision.cpp
Game/Source/Components/Public/: CarCollision.h
Game/Source/GameObjects/Private/: Player.cpp  Target.cpp  TargetSpawner.cpp
Game/Source/GameObjects/Public/: Player.h  Target.h  TargetSpawner.h
